unpackaged/main/default/objects/ACG_ERS_Event__c/ACG_ERS_Event__c.object-meta.xml
<CustomObject>
    <label>ERS Event</label>
    <nameField>
        <label>ERS Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ERS Event</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>