unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Account__c.field-meta.xml
<CustomField>
    <fullName>ACG_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ERS_Event</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>