unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Breakdown_Location__c.field-meta.xml
<CustomField>
    <fullName>ACG_Breakdown_Location__c</fullName>
    <label>Breakdown Location</label>
    <length>250</length>
    <type>Text</type>
</CustomField>