unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Breakdown_Location_City__c.field-meta.xml
<CustomField>
    <fullName>ACG_Breakdown_Location_City__c</fullName>
    <label>Breakdown Location City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>