unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Breakdown_Location_State__c.field-meta.xml
<CustomField>
    <fullName>ACG_Breakdown_Location_State__c</fullName>
    <label>Breakdown Location State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NC</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>Unk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>