unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Call_Cleared__c.field-meta.xml
<CustomField>
    <fullName>ACG_Call_Cleared__c</fullName>
    <label>Call Cleared</label>
    <type>DateTime</type>
</CustomField>