unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Call_Received__c.field-meta.xml
<CustomField>
    <fullName>ACG_Call_Received__c</fullName>
    <label>Call Received</label>
    <type>DateTime</type>
</CustomField>