unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Call_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>ACG_Call_Status_Description__c</fullName>
    <label>Call Status Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>