unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Case__c.field-meta.xml
<CustomField>
    <fullName>ACG_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>ERS_Event</relationshipName>
    <type>Lookup</type>
</CustomField>