unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Club_Num__c.field-meta.xml
<CustomField>
    <fullName>ACG_Club_Num__c</fullName>
    <inlineHelpText>Represents the AAA Club that handled the call</inlineHelpText>
    <label>Service Club #</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
            </value>
            <value>
                <fullName>002</fullName>
            </value>
            <value>
                <fullName>004</fullName>
            </value>
            <value>
                <fullName>005</fullName>
            </value>
            <value>
                <fullName>006</fullName>
            </value>
            <value>
                <fullName>007</fullName>
            </value>
            <value>
                <fullName>008</fullName>
            </value>
            <value>
                <fullName>010</fullName>
            </value>
            <value>
                <fullName>011</fullName>
            </value>
            <value>
                <fullName>012</fullName>
            </value>
            <value>
                <fullName>014</fullName>
            </value>
            <value>
                <fullName>017</fullName>
            </value>
            <value>
                <fullName>018</fullName>
            </value>
            <value>
                <fullName>019</fullName>
            </value>
            <value>
                <fullName>020</fullName>
            </value>
            <value>
                <fullName>022</fullName>
            </value>
            <value>
                <fullName>023</fullName>
            </value>
            <value>
                <fullName>028</fullName>
            </value>
            <value>
                <fullName>032</fullName>
            </value>
            <value>
                <fullName>033</fullName>
            </value>
            <value>
                <fullName>034</fullName>
            </value>
            <value>
                <fullName>035</fullName>
            </value>
            <value>
                <fullName>036</fullName>
            </value>
            <value>
                <fullName>037</fullName>
            </value>
            <value>
                <fullName>039</fullName>
            </value>
            <value>
                <fullName>042</fullName>
            </value>
            <value>
                <fullName>044</fullName>
            </value>
            <value>
                <fullName>045</fullName>
            </value>
            <value>
                <fullName>047</fullName>
            </value>
            <value>
                <fullName>049</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>