unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Contact__c.field-meta.xml
<CustomField>
    <fullName>ACG_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ERS_Events</relationshipName>
    <type>Lookup</type>
</CustomField>