unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>ACG_Contact_First_Name__c</fullName>
    <description>This field is used by Process Builder when calculating merge fields in an email alert.</description>
    <formula>ACG_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact First Name</label>
    <type>Text</type>
</CustomField>