unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_ERS_Call__c.field-meta.xml
<CustomField>
    <fullName>ACG_ERS_Call__c</fullName>
    <label>ERS Call #</label>
    <length>6</length>
    <type>Text</type>
</CustomField>