unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_ERS_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>ACG_ERS_Email_Address__c</fullName>
    <inlineHelpText>Email address captured by ERS operator</inlineHelpText>
    <label>ERS Email Address</label>
    <type>Email</type>
</CustomField>