unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_ERS_Email_Address_Text__c.field-meta.xml
<CustomField>
    <fullName>ACG_ERS_Email_Address_Text__c</fullName>
    <description>Text version of ERS email address field. If ERS email address is not compatible with the email field type it will be null.</description>
    <label>ERS Email Address Text</label>
    <length>64</length>
    <type>Text</type>
</CustomField>