unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_ERS_Member_Phone__c.field-meta.xml
<CustomField>
    <fullName>ACG_ERS_Member_Phone__c</fullName>
    <inlineHelpText>Phone number captured by ERS operator</inlineHelpText>
    <label>ERS Member Phone</label>
    <type>Phone</type>
</CustomField>