unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_ERS_Member_Phone_Text__c.field-meta.xml
<CustomField>
    <fullName>ACG_ERS_Member_Phone_Text__c</fullName>
    <description>Text version of ERS phone field. If ERS phone is not compatible with the phone field type it will be null.</description>
    <label>ERS Member Phone Text</label>
    <length>15</length>
    <type>Text</type>
</CustomField>