unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Event_Comments__c.field-meta.xml
<CustomField>
    <fullName>ACG_Event_Comments__c</fullName>
    <label>Event Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>