unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_IntegrationId__c.field-meta.xml
<CustomField>
    <fullName>ACG_IntegrationId__c</fullName>
    <externalId>true</externalId>
    <label>IntegrationId</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>