unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Is_Other_Survey__c.field-meta.xml
<CustomField>
    <fullName>ACG_Is_Other_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the ERS Event has been selected for another survey.</description>
    <label>Is Other Survey</label>
    <type>Checkbox</type>
</CustomField>