unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Is_Paid__c.field-meta.xml
<CustomField>
    <fullName>ACG_Is_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes that the provider has been paid for this ERS event
(No updates occur after an event has been paid)</description>
    <label>Is Paid</label>
    <type>Checkbox</type>
</CustomField>