unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Is_SF_Survey__c.field-meta.xml
<CustomField>
    <fullName>ACG_Is_SF_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identified car care visits that have been sent a survey through Salesforce</description>
    <label>Is SF Survey</label>
    <type>Checkbox</type>
</CustomField>