unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Provider__c.field-meta.xml
<CustomField>
    <fullName>ACG_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>ERS_Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>ERS_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>