unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Provider_Cost__c.field-meta.xml
<CustomField>
    <fullName>ACG_Provider_Cost__c</fullName>
    <label>Provider Cost</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>