unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Reciprocal__c.field-meta.xml
<CustomField>
    <fullName>ACG_Reciprocal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes that this call was a reciprocal performed by another AAA club</description>
    <inlineHelpText>Denotes that this call was a reciprocal performed by another AAA club</inlineHelpText>
    <label>Reciprocal</label>
    <type>Checkbox</type>
</CustomField>