unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>ACG_Reimbursement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Denotes if the event was a reimbursement event paid initially by the member.</inlineHelpText>
    <label>Reimbursement</label>
    <type>Checkbox</type>
</CustomField>