unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>ACG_Response_Time__c</fullName>
    <inlineHelpText>Response time in minutes</inlineHelpText>
    <label>Response Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>