unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Survey_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>ACG_Survey_Send_Date__c</fullName>
    <label>Survey Send Date</label>
    <type>DateTime</type>
</CustomField>