unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Telephone_Type__c.field-meta.xml
<CustomField>
    <fullName>ACG_Telephone_Type__c</fullName>
    <label>Telephone Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>