unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Tow_Destination__c.field-meta.xml
<CustomField>
    <fullName>ACG_Tow_Destination__c</fullName>
    <label>Tow Destination</label>
    <length>250</length>
    <type>Text</type>
</CustomField>