unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Trouble_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>ACG_Trouble_Code_Description__c</fullName>
    <label>Trouble Code Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>