unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>ACG_Vehicle_Make__c</fullName>
    <label>Vehicle Make</label>
    <length>100</length>
    <type>Text</type>
</CustomField>