unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Vehicle_Year__c.field-meta.xml
<CustomField>
    <fullName>ACG_Vehicle_Year__c</fullName>
    <label>Vehicle Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>