unpackaged/main/default/objects/ACG_ERS_Event__c/fields/ACG_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>ACG_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipName>ERS_Events</relationshipName>
    <type>Lookup</type>
</CustomField>